manifests/frontend-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend
spec:
  replicas: 3

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/veenayadav02/health-website:6
        ports:
        - containerPort: 80

  strategy:
    blueGreen:
      activeService: frontend-active
      previewService: frontend-preview

      autoPromotionEnabled: false

      previewReplicaCount: 3

      scaleDownDelaySeconds: 30
